Fixed the alignment of contacts

--- a/css/main.css
+++ b/css/main.css
@@ -338,6 +338,10 @@ footer {
   vertical-align: top;
 }
 
+.contact-data {
+  vertical-align: top;
+}
+
 .map {
   position: relative;
   width: 98%;
@@ -345,6 +349,7 @@ footer {
   /*height: 200px;*/
   border: 2px solid;
   border-color: #cfcacb;
+  overflow: hidden;
 }
 
 .map iframe {
